# internship_tool

./: .gitignore  architecture.drawio  package-lock.json  package.json  pyproject.toml
.opencode/plans/: fix-consumption-detection.md
fenrir_tokens/default/: manifest_20260721_113442.json  playaround_MI_20260721_114414.token
src/azauth/: cli.py
src/azauth/collectors/: azurehound_runner.py
src/azauth/commands/: db.py  enumerate.py  exploit.py  login.py  logout.py  pipeline.py  status.py  token.py
src/azauth/core/: authenticator.py
src/azauth/db/: client.py  docker.py  ingest.py  schema.py
src/azauth/edges/: edge_builder.py  neo4j_writer.py
src/azauth/enumeration/: app_graph_enum.py
src/azauth/exploit/: arm_enum.py  identity_enum.py  imds_payload.py  orchestrator.py
src/fenrir/: cli.py
src/fenrir/bloodhound/: client.py
src/fenrir/commands/: consent.py  db.py  enumerate.py  exploit.py  login.py  logout.py  pipeline.py  status.py  token.py
src/fenrir/core/: authenticator.py
src/fenrir/db/: client.py  docker.py  ingest.py  schema.py
src/fenrir/edges/: edge_builder.py  neo4j_writer.py
src/fenrir/enumeration/: app_graph_enum.py
src/fenrir/exploit/: arm_enum.py  identity_enum.py  imds_payload.py  run_command.py  (+2 more)
tests/: test_azurehound_runner.py  test_bloodhound_client.py  test_cli.py  test_db.py  test_edge_builder.py  test_enumerate.py  test_exploit_arm_enum.py  test_exploit_imds.py  test_exploit_orchestrator.py  test_exploit_resources.py  test_exploit_run_command.py  test_exploit_sp.py  test_neo4j_writer.py
tools/: pynauth_config.json.template
(+3 files in other folders)
